web-service-consumer/2.0/modules/ROOT/pages/web-service-consumer-upgrade-migrate.adoc
= Upgrading and Migrating Web Service Consumer Connector to Version 2.0 

Upgrade Web Service Consumer Connector to version 2.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.x |2.x
|===

== Changes in This Release

Web Service Consumer Connector 2.0 includes these changes.

* Web Service Consumer Connector (and its dependencies) are now compilable and compatible only with Java 17. 
* To align with modern development practices and ensure continued compatibility with secure and supported libraries, Web Service Consumer Connector is upgraded from Spring 5.x to Spring 6.x.

== Upgrade Prerequisites

Before you perform the upgrade, you must create a backup of your files, data, and configurations in case you need to restore them.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, right-click the project and select *Manage Dependencies* > *Manage Modules*.
. Select `Web Service Consumer Connector - Mule 4` and click *Update version*.
. Click *Apply and Close*.
. Verify that the Web Service Consumer Connector dependency version is `2.0.0` in the `pom.xml` file in the Mule project.

Alternatively, you can manually update the Web Service Consumer Connector dependency version in the `pom.xml` file in the Mule project, or simply add the updated connector to the project.

=== Verify the Upgrade

After you upgrade the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.

== Troubleshoot

If there are problems with caching the parameters and caching the metadata, try restarting Anypoint Studio.

=== Revert the Upgrade

If it is necessary to revert to the previous version of Web Service Consumer Connector, change the Web Service Consumer Connector dependency version `2.0.0` in the project's `pom.xml` to the previous version.

You must update the project's `pom.xml` in Anypoint Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:web-service-consumer-reference.adoc[Web Service Consumer Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
